2009-02-21  Stefan Kost  <ensonic@users.sf.net>

	* configure.in:
	* gtkdoc-fixxref.in:
	  Fix params and running of 'highlight'.

2009-02-21  Stefan Kost  <ensonic@users.sf.net>

	* gtkdoc-mkdb.in:
	  Require the line to ends after the double-colon (sans whitespace),

2009-02-20  Stefan Kost  <ensonic@users.sf.net>

	patch by: Damien Lespiau <damien.lespiau@gmail.com>

	* gtk-doc.make:
	* gtk-doc.notmpl.make:
	* tests/gtk-doc.make:
	* tests/gtk-doc.notmpl.make:
	  Add --tag=CC to libtool invocations. Fixes #572396.

2009-02-18  Stefan Kost  <ensonic@users.sf.net>

	* examples/Makefile.am:
	  Fix example to show to to make it work even with make distcheck.

2009-02-16  Stefan Kost  <ensonic@users.sf.net>

	* style.css:
	* tests/gobject/src/gobject.c:
	  Also style <note> tags.

2009-02-10  Stefan Kost  <ensonic@users.sf.net>

	* MAINTAINERS:
	  Fix the spelling of my name.

2009-02-05  Stefan Kost  <ensonic@users.sf.net>

	* TODO:
	  Some planning.

	* gtkdoc-mkdb.in:
	  Single tabs are rendered inconsistently in browsers. Replace them with
	  a &nbsp;.

2009-01-31  Stefan Kost  <ensonic@users.sf.net>

	* tests/gobject/src/gobject.c:
	  Try to link to struct members as a test for Bug #565126.

2009-01-30  Stefan Kost  <ensonic@users.sf.net>

	* gtkdoc-mkdb.in:
	  Expanding urls is not a good idea yet. Need to figure out.

2009-01-29  Stefan Kost  <ensonic@users.sf.net>

	* tests/tools.sh:
	  Remove, this is generated.

2009-01-29  Stefan Kost  <ensonic@users.sf.net>

	* gtkdoc-mkdb.in:
	  Automatically creating ulinks for urls.

	* tests/gobject/src/gobject.c:
	  Add a link for testing.

2009-01-28  Stefan Kost  <ensonic@users.sf.net>

	* style-classic.css:
	* style.css:
	* tests/gobject/docs/tester-docs.xml:
	* tests/gobject/src/gobject.c:
	  Major CSS cleanup. This is hopefully an end of layout issues related
	  to the fixed navigation bar.

2009-01-28  Stefan Kost  <ensonic@users.sf.net>

	patch by: David Nečas <yeti@physics.muni.cz>

	* gtkdoc-mkdb.in: