@@ -1,5 +1,12 @@
 2009-02-21  Stefan Kost  <ensonic@users.sf.net>
 
+	* gtkdoc-mkdb.in:
+	* help/manual/C/gtk-doc-manual.xml:
+	* tests/gobject/src/gobject.c:
+	  Allow linking to struct members. Update docs. Fixes #565126.
+
+2009-02-21  Stefan Kost  <ensonic@users.sf.net>
+
 	* configure.in:
 	* gtkdoc-fixxref.in:
 	  Fix params and running of 'highlight'.
